--- a/ServletsAndJSPs/HelloWorldJavaWeb/HelloWorldJavaWeb/src/main/webapp/index.html
+++ b/ServletsAndJSPs/HelloWorldJavaWeb/HelloWorldJavaWeb/src/main/webapp/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello World Java Web!</h1>
+        <a href="/HelloWorldJavaWeb/main">test Servlet</a>
     </body>
 </html>
